tests/invalid_nodepend/bad_include.m
%---------------------------------------------------------------------------%
% vim: ft=mercury ts=4 sw=4 et
%---------------------------------------------------------------------------%

:- module bad_include.
:- interface.

:- import_module io.

:- pred main(io::di, io::uo) is det.

%---------------------------------------------------------------------------%
%---------------------------------------------------------------------------%

:- implementation.

:- include_module 42.
:- include_module f([1, 2, 3]).
:- include_module bad_include.sub1.sub2.
:- include_module other_module.sub3.

%---------------------------------------------------------------------------%

main(!IO) :-
    io.write_string("hello, world\n", !IO).

%---------------------------------------------------------------------------%
:- end_module bad_include.
%---------------------------------------------------------------------------%
